--- a/admin-naive-ui/package.json
+++ b/admin-naive-ui/package.json
@@ -43,7 +43,10 @@
     "preview": "vite preview",
     "release": "sa release",
     "typecheck": "vue-tsc --noEmit --skipLibCheck",
-    "update-pkg": "sa update-pkg"
+    "update-pkg": "sa update-pkg",
+    "changelog:generate": "conventional-changelog -p conventionalcommits -i ../CHANGELOG.md -s -r 0",
+    "changelog:update": "conventional-changelog -p conventionalcommits -i ../CHANGELOG.md -s",
+    "postversion": "npm run changelog:update && git add ../CHANGELOG.md && git commit -m 'chore: update CHANGELOG.md for v'$npm_package_version"
   },
   "dependencies": {
     "@better-scroll/core": "2.5.1",
@@ -71,6 +74,7 @@
     "nprogress": "0.2.0",
     "pinia": "3.0.4",
     "streamsaver": "^2.0.6",
+
     "tailwind-merge": "3.4.0",
     "vform3-builds": "^3.0.10",
     "vue": "3.5.24",
@@ -105,6 +109,7 @@
     "eslint-plugin-vue": "10.5.1",
     "kolorist": "1.8.0",
     "ora": "^5.4.1",
+    "conventional-changelog-cli": "^5.0.0",
     "sass": "1.94.0",
     "simple-git-hooks": "2.13.1",
     "ssh2": "^1.15.0",
